--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html generated='2015-09-14 22:52:18 +0200'>
+<html generated='2015-09-30 17:39:08 +0200'>
   <head>
     <title>
       maxscopp.de ~ LOOK MOM, I'M ON THE INTERNET!
@@ -13,6 +13,7 @@
   </head>
   <body>
     <header>
+      <img src='//graph.facebook.com/100009831876615/picture?type=large'>
       <h1>
         Max
         <span>Scopp</span>
@@ -39,46 +40,48 @@
             <h3>What I play with</h3>
           </label>
           <div class='tab-inner'>
-            <p>
-               I'm interested into programming in general,
-               although I'm currently playing with:
-            </p>
-            <ul>
-              <li>
-                PHP
-                <span class='clamped'>Typo3 Extensions</span>
-              </li>
-              <li>
-                JavaScript
-                <span class='clamped'>mainly jQuery</span>
-              </li>
-              <li>
-                LESS
-                <span class='clamped'>CSS pre-preprocessor in Node.js</span>
-              </li>
-              <li>
-                HAML
-                <span class='clamped'>HTML pre-preprocessor in Ruby</span>
-              </li>
-              <li>
-                Python3
-                <span class='clamped'>sneaker, raspery-pi 😍</span>
-              </li>
-            </ul>
-            <p>
-               Planed in the future is:
-            </p>
-            <ul>
-              <li>
-                Objective-C
-                <span class='clamped'>or C-sharp</span>
-              </li>
-              <li>
-                Java
-                <span class='clamped'>Android App-Development</span>
-              </li>
-              <li>Maybe Go too, I'll see.</li>
-            </ul>
+            <div class='inner-wrap'>
+              <p>
+                 I'm interested into programming in general,
+                 although I'm currently playing with:
+              </p>
+              <ul>
+                <li>
+                  PHP
+                  <span class='clamped'>Typo3 Extensions</span>
+                </li>
+                <li>
+                  JavaScript
+                  <span class='clamped'>mainly jQuery</span>
+                </li>
+                <li>
+                  LESS
+                  <span class='clamped'>CSS pre-preprocessor in Node.js</span>
+                </li>
+                <li>
+                  HAML
+                  <span class='clamped'>HTML pre-preprocessor in Ruby</span>
+                </li>
+                <li>
+                  Python3
+                  <span class='clamped'>sneaker, raspery-pi 😍</span>
+                </li>
+              </ul>
+              <p>
+                 Planed in the future is:
+              </p>
+              <ul>
+                <li>
+                  Objective-C
+                  <span class='clamped'>or C-sharp</span>
+                </li>
+                <li>
+                  Java
+                  <span class='clamped'>Android App-Development</span>
+                </li>
+                <li>Maybe Go too, I'll see.</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
