--- a/index.html
+++ b/index.html
@@ -1,103 +1,41 @@
 <!DOCTYPE html>
 <html generated='2015-09-30 17:39:08 +0200'>
-  <head>
-    <title>
-      maxscopp.de ~ LOOK MOM, I'M ON THE INTERNET!
-    </title>
-    <meta charset='utf-8'>
-    <meta content="Max Scopp's Website" name='description'>
-    <meta content='Max Scopp' name='author'>
-    <meta content='width=device-width,initial-scale=1' name='viewport'>
-    <link href='css/main.css' rel='stylesheet'>
-    <!--[if lt IE 9]> <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
-  </head>
-  <body>
-    <header>
-      <img src='//graph.facebook.com/100009831876615/picture?type=large'>
-      <h1>
-        Max
-        <span>Scopp</span>
-      </h1>
-      <h2>Front & Backend Developer</h2>
-    </header>
-    <article class='container'>
-      <p>
-        <span class='huge'>Hi.</span>
-         My name is Max Scopp, I’m a developer with a penchant for
-         the web since I’m 12 years old &ndash; all starting with
-         <a href='https://en.wikipedia.org/wiki/Halo:_Combat_Evolved'>
-           Halo: Combat Evolved</a>.
-      </p>
-      <p>
-         I’m currently living in Bremen, Germany due to my schooling
-         at <a href='http://artundweise.de'>
-           artundweise GmbH</a>.
-      </p>
-      <div class='tab-container'>
-        <div class='tab-row'>
-          <input id='tab' type='checkbox'>
-          <label for='tab'>
-            <h3>What I play with</h3>
-          </label>
-          <div class='tab-inner'>
-            <div class='inner-wrap'>
-              <p>
-                 I'm interested into programming in general,
-                 although I'm currently playing with:
-              </p>
-              <ul>
-                <li>
-                  PHP
-                  <span class='clamped'>Typo3 Extensions</span>
-                </li>
-                <li>
-                  JavaScript
-                  <span class='clamped'>mainly jQuery</span>
-                </li>
-                <li>
-                  LESS
-                  <span class='clamped'>CSS pre-preprocessor in Node.js</span>
-                </li>
-                <li>
-                  HAML
-                  <span class='clamped'>HTML pre-preprocessor in Ruby</span>
-                </li>
-                <li>
-                  Python3
-                  <span class='clamped'>sneaker, raspery-pi 😍</span>
-                </li>
-              </ul>
-              <p>
-                 Planed in the future is:
-              </p>
-              <ul>
-                <li>
-                  Objective-C
-                  <span class='clamped'>or C-sharp</span>
-                </li>
-                <li>
-                  Java
-                  <span class='clamped'>Android App-Development</span>
-                </li>
-                <li>Maybe Go too, I'll see.</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </article>
-    <footer class='container'>
-      <section class='social-shit'>
-        <a class='social-btn facebook' href='//facebook.com/100009831876615' target='_blank'>Facebook</a>
-        <a class='social-btn codepen' href='//codepen.io/max-scopp/' target='_blank'>CodePen</a>
-      </section>
-      <h6>
-        &copy;
-        2015
-        Max Scopp
-        &mdash; send spam to
-        <a href='mailto:m.scopp32@gmail.com'>m.scopp32@gmail.com</a>
-      </h6>
-    </footer>
-  </body>
+
+<head>
+  <title>
+    maxscopp.de
+  </title>
+  <meta charset='utf-8'>
+  <meta content="Max Scopp's Website" name='description'>
+  <meta content='Max Scopp' name='author'>
+  <meta content='width=device-width,initial-scale=1' name='viewport'>
+  <link href='css/main.css' rel='stylesheet'>
+  <!--[if lt IE 9]> <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
+  <style>
+    :root,
+    html,
+    body {
+      margin: 0;
+
+      font-size: 18px;
+      font-family: 'Roboto', system-ui, sans-serif;
+    }
+
+    .ms-flex-center {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      min-height: 100vh;
+    }
+
+  </style>
+</head>
+
+<body>
+  <div class="ms-flex-center">
+    <p>Nothing to see here, yet</p>
+  </div>
+</body>
+
 </html>
