--- a/index.html
+++ b/index.html
@@ -93,6 +93,18 @@ ul.list-horizontal {
     </ul>
     <p>It's about efficient simplicity, in an complex world.</p>
   </main>
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-69976729-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  ga('set', 'anonymizeIp', true);
+
+  gtag('config', 'UA-69976729-1');
+</script>
+
 </body>
 
 </html>
