--- a/index.html
+++ b/index.html
@@ -112,14 +112,16 @@ ul.list-horizontal {
     </ul>
     <p>It's about efficient simplicity, in an complex world.</p>
   </main>
-	
-  <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-TZ56KGW');</script>
-<!-- End Google Tag Manager -->
+	  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-69976729-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  ga('set', 'anonymizeIp', true);
+   gtag('config', 'UA-69976729-1');
+</script>
 </body>
 
 </html>
