--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@ ul.list-horizontal {
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  ga('set', 'anonymizeIp', true);
-   gtag('config', 'UA-69976729-1');
+  gtag('set', 'anonymizeIp', true);
+  gtag('config', 'UA-69976729-1');
 </script>
 </body>
 
