--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <title>Stencil Starter App</title>
-  <meta name="Description" content="Welcome to the Stencil App Starter. You can use this starter to build entire apps all with web components using Stencil!">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
-  <meta name="theme-color" content="#16161d">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta http-equiv="x-ua-compatible" content="IE=Edge">
+	<meta charset="utf-8">
+	<title>maxscopp.de</title>
+	<meta name="Description" content="JavaScript specialist's Website and Portfolio">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
+	<meta name="theme-color" content="#121212">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="msapplication-tap-highlight" content="no">
+	<meta http-equiv="x-ua-compatible" content="IE=Edge">
 
-  <script type="module" src="/build/app.esm.js"></script>
-  <script nomodule src="/build/app.js"></script>
-  <link href="/build/app.css" rel="stylesheet">
+	<script type="module" src="/build/app.esm.js"></script>
+	<script nomodule src="/build/app.js"></script>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/minireset.css/0.0.2/minireset.min.css" rel="stylesheet">
+	<link href="/build/app.css" rel="stylesheet">
 
-  <link rel="apple-touch-icon" href="/assets/icon/icon.png">
-  <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico">
-  <link rel="manifest" href="/manifest.json">
+	<link rel="apple-touch-icon" href="/assets/icon/icon.png">
+	<link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico">
+	<link rel="manifest" href="/manifest.json">
 </head>
+
 <body>
 
-  <app-root></app-root>
+	<app-root></app-root>
 
 </body>
+
 </html>
