--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 	<meta name="msapplication-tap-highlight" content="no">
 	<meta http-equiv="x-ua-compatible" content="IE=Edge">
 
-	<script type="module" rel=preload src="/build/app.esm.js"></script>
+	<script type="module" rel="preload" src="/build/app.esm.js"></script>
 	<script nomodule src="/build/app.js"></script>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/minireset.css/0.0.2/minireset.min.css" rel="stylesheet">
 	<link href="/build/app.css" rel="stylesheet">
