--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/minireset.css/0.0.2/minireset.min.css" rel="stylesheet">
 	<link href="/build/app.css" rel="stylesheet">
 
+
+	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
 	<link rel="apple-touch-icon" href="/assets/icon/icon.png">
 	<link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico">
 	<link rel="manifest" href="/manifest.json">
