--- a/src/index_backend.html
+++ b/src/index_backend.html
@@ -10,7 +10,7 @@
 <body>
 	<!-- Include the script that builds the page and powers Netlify CMS -->
 	<script rel="preload" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-	<script async rel="preload" src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+	<script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
 
 	<script>
 		netlifyIdentity.init({
