zeitgleich retrospective link

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@ ul.list-horizontal {
   </aside>
   <main>
     <h1>Max Scopp</h1>
+	  <p><a href="/a-retrospective-zeitgleich.html">Warum ich glücklich bin, dass die Kooperation zwischen Zeitgleich und mir beendert wurde.</a></p>
     <ul>
       <li>Sleepy but highly passionate and efficient Developer</li>
       <li>Don't talk cheap, do it</li>
