--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1,viewport-fit=cover"
-    />
 
-    <title>max-scopp</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="description" content="Web developer with specialization in JavaScript and frontend development.">
+  <meta name="viewport" content="width=device-width, initial-scale=1,viewport-fit=cover" />
 
-    <link rel="stylesheet" href="styles/app.scss" />
-  </head>
-  <body>
-    <include src="partials/header.html"></include>
 
-    <main id="content"></main>
+  <title>max-scopp</title>
 
-    <include src="partials/footer.html"></include>
+  <link rel="stylesheet" href="styles/app.scss" />
+</head>
 
-    <script type="module" src="main.ts"></script>
-  </body>
+<body>
+  <include src="partials/header.html"></include>
+
+  <main id="content"></main>
+
+  <include src="partials/footer.html"></include>
+
+  <script type="module" src="main.ts"></script>
+</body>
+
 </html>
