--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,11 @@
   <title>max-scopp</title>
 
   <link rel="stylesheet" href="styles/app.scss" />
+
+  <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" style="display: none;">
+    <path id="reload" fill="currentColor" d="M13.5 2c-5.629 0-10.212 4.436-10.475 10h-3.025l4.537 5.917 4.463-5.917h-2.975c.26-3.902 3.508-7 7.475-7 4.136 0 7.5 3.364 7.5 7.5s-3.364 7.5-7.5 7.5c-2.381 0-4.502-1.119-5.876-2.854l-1.847 2.449c1.919 2.088 4.664 3.405 7.723 3.405 5.798 0 10.5-4.702 10.5-10.5s-4.702-10.5-10.5-10.5z"/>
+    <path id="external" fill="currentColor" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"/></svg>
+  </svg>
 </head>
 
 <body>
