--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <!-- Made with love in Bremen -->
   </body>
 </html>
